# py4pd-spt

./: README.md  py4pd-spt.py  pyproject.toml  requirements.txt
Resources/: py4pd-spt-help.pd
spt/: __init__.py
